[gd_scene load_steps=2 format=3 uid="uid://cjp2g8qivyb1d"]

[ext_resource type="Script" path="res://scripts/InventoryUI.gd" id="1_3mq2x"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_3mq2x")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="MainContainer" type="VBoxContainer" parent="Background"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="Background/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="Title" type="Label" parent="Background/MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BEUTEL"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="Background/MainContainer/HeaderContainer"]
layout_mode = 2
text = "Geld: 1000 â‚¬"
horizontal_alignment = 2

[node name="ContentContainer" type="HBoxContainer" parent="Background/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CategoryPanel" type="VBoxContainer" parent="Background/MainContainer/ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)

[node name="CategoryLabel" type="Label" parent="Background/MainContainer/ContentContainer/CategoryPanel"]
layout_mode = 2
text = "Taschen"
horizontal_alignment = 1

[node name="CategoryButtons" type="VBoxContainer" parent="Background/MainContainer/ContentContainer/CategoryPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabFanggeraete" type="Button" parent="Background/MainContainer/ContentContainer/CategoryPanel/CategoryButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "ðŸŽ¯ Fang"

[node name="TabMedizin" type="Button" parent="Background/MainContainer/ContentContainer/CategoryPanel/CategoryButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "ðŸ’Š Medizin"

[node name="TabKampfBoosts" type="Button" parent="Background/MainContainer/ContentContainer/CategoryPanel/CategoryButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "âš¡ Boost"

[node name="TabBasisItems" type="Button" parent="Background/MainContainer/ContentContainer/CategoryPanel/CategoryButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "ðŸ”‘ Basis"

[node name="ItemListPanel" type="VBoxContainer" parent="Background/MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemListLabel" type="Label" parent="Background/MainContainer/ContentContainer/ItemListPanel"]
layout_mode = 2
text = "Items:"

[node name="ItemList" type="ItemList" parent="Background/MainContainer/ContentContainer/ItemListPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailsPanel" type="VBoxContainer" parent="Background/MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemDetailsLabel" type="Label" parent="Background/MainContainer/ContentContainer/DetailsPanel"]
layout_mode = 2
text = "Beschreibung:"

[node name="ItemIcon" type="TextureRect" parent="Background/MainContainer/ContentContainer/DetailsPanel"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
size_flags_horizontal = 4
expand_mode = 1

[node name="ItemDescription" type="TextEdit" parent="Background/MainContainer/ContentContainer/DetailsPanel"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "WÃ¤hle ein Item aus..."
editable = false

[node name="ButtonContainer" type="HBoxContainer" parent="Background/MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="UseButton" type="Button" parent="Background/MainContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Benutzen"

[node name="CloseButton" type="Button" parent="Background/MainContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SchlieÃŸen"

[node name="FooterInstructions" type="Label" parent="Background/MainContainer"]
layout_mode = 2
text = "[Enter]: BestÃ¤tigen    [ESC]: ZurÃ¼ck    [Pfeiltasten]: Navigieren"
horizontal_alignment = 1